# squirrel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: nightly-release.yml
crates/squirrel/: Cargo.toml
crates/squirrel/src/: io.rs  main.rs
crates/squirrel_ast/: Cargo.toml
crates/squirrel_ast/src/: atom.rs  expr.rs  stmt.rs
crates/squirrel_common/: Cargo.toml
crates/squirrel_common/src/: io.rs
crates/squirrel_jit/: Cargo.toml
crates/squirrel_jit/src/: consts.rs  lib.rs  meta.rs  stat.rs
crates/squirrel_lex/: Cargo.toml
crates/squirrel_lex/src/: lexer.rs  token.rs
crates/squirrel_parse/: Cargo.toml
crates/squirrel_parse/src/: errors.rs  parser.rs
crates/squirrel_rt/: Cargo.toml
crates/squirrel_rt/src/: error.rs  interpreter.rs
crates/squirrel_rt/src/builtins/: env.rs  is.rs  list.rs  math.rs  mem.rs  process.rs  utils.rs
crates/squirrel_rt/src/eval/: expr.rs  stmt.rs
crates/squirrel_rt/src/rt/: env.rs  value.rs
crates/squirrel_sema/: Cargo.toml
crates/squirrel_sema/src/: lib.rs
crates/squirrel_tests/: Cargo.toml
crates/squirrel_tests/src/: assertion.rs  io.rs  jit.rs  lex.rs
crates/squirrel_tests/src/snapshots/: squirrel_tests__parse__parse_3.snap  squirrel_tests__rt__rt_for.snap  (+11 more)
crates/squirrel_wasm/: Cargo.toml
crates/squirrel_wasm/src/: io.rs  lib.rs
crates/tick/src/: io.rs
crates/tick_lex/src/: lexer.rs
crates/tick_parse/src/: parser.rs
crates/tick_rt/: Cargo.toml
crates/tick_rt/src/: interpreter.rs
crates/tick_sema/src/: lib.rs
crates/tick_tests/src/: assertion.rs
scripts/: build.sh
syntax/: DESIGN.md
(+8 files in other folders)
