[lib]
crate-type = ["cdylib"]

[package]
name = "squirrel_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.108"
squirrel_rt = { path = "../squirrel_rt" }
squirrel_common = { path = "../squirrel_common" }
camino = "1.2.2"
miette = { version = "7.6.0", features = ["fancy"] }
